--- a/services.html
+++ b/services.html
@@ -16,10 +16,10 @@
 <div class="w3-top">
     <div class="w3-bar w3-black w3-card">
         <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-        <a href="#" class="w3-bar-item w3-button w3-padding-large">Home</a>
-        <a href="#missionstatement" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Mission Statement</a>
+        <a href="./index.html" class="w3-bar-item w3-button w3-padding-large">Home</a>
+        <a href="./index #missionstatement" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Mission Statement</a>
         <a href="./services.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Services</a>
-        <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
+        <a href="./index #contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
         <div class="w3-dropdown-hover w3-hide-small">
           <!--   <button class="w3-padding-large w3-button" title="More">More <i class="fa fa-caret-down"></i></button>
             <div class="w3-dropdown-content w3-bar-block w3-card-4">
@@ -41,12 +41,10 @@
 </div>
 
 <!-- Page content -->
-<div class="w3-content" style="max-width:2000px;margin-top:46px">
 
     <!-- Automatic Slideshow Images -->
     <!-- <div class=""w3-display-container w3-center"">  -->
-<div class="relative">
-        <img src="roundtableart1.jpg" style="width:100%">
+        
     </div>
 </div>
 
