--- a/services.html
+++ b/services.html
@@ -17,9 +17,9 @@
     <div class="w3-bar w3-black w3-card">
         <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
         <a href="/" class="w3-bar-item w3-button w3-padding-large">Home</a>
-        <a href="./index #missionstatement" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Mission Statement</a>
+        <a href="/ #missionstatement" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Mission Statement</a>
         <a href="./services.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Services</a>
-        <a href="./index #contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
+        <a href="/" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
         <div class="w3-dropdown-hover w3-hide-small">
           <!--   <button class="w3-padding-large w3-button" title="More">More <i class="fa fa-caret-down"></i></button>
             <div class="w3-dropdown-content w3-bar-block w3-card-4">
@@ -71,8 +71,8 @@
     <!-- The Band Section -->
     <div class="w3-black" id="missionstatement">
     <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
-        <h2 class="w3-wide">Mission Statement</h2>
-        <p class="w3-justify">Our mission is to provide innovative, modern, and impactful consulting services to meet our client needs. Through clear communication, data, and analytics we strive to find what within your business could be better. Our unique lens will provide high quality insights in order to save you money, make your business more efficient, and most importantly, make each one of our client’s work lives that much better.</p>
+        <h2 class="w3-wide">Services</h2>
+        <p class="w3-justify">There</p>
         <div class="w3-row w3-padding-32">
             <div class="w3-third">
                 <p>Roberto Rojas</p>
