--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
         </div>
     </div>
     <!-- Ticket Modal -->
-    <div class="w3-black" id="contact">
-    <div id="ticketModal" class="w3-modal">
-        <div class="w3-modal-content w3-animate-top w3-card-4">
+    <!-- <div class="w3-black" id="contact"> -->
+    <!-- <div id="ticketModal" class="w3-modal"> -->
+        <!-- <div class="w3-modal-content w3-animate-top w3-card-4"> 
             <header class="w3-container w3-teal w3-center w3-padding-32">
         <span onclick="document.getElementById('ticketModal').style.display='none'"
               class="w3-button w3-teal w3-xlarge w3-display-topright">×</span>
@@ -136,10 +136,10 @@
                 <p class="w3-right">Need <a href="#" class="w3-text-blue">help?</a></p>
             </div>
         </div>
-    </div>
+    </div>-->
 
     <!-- The Contact Section -->
-    <div class="w3-container w3-content w3-padding-64" style="max-width:1200px" id="contact">
+  <div class="w3-container w3-content w3-padding-64" style="max-width:1200px" id="contact">
         <h2 class="w3-wide w3-margin-left">Contact</h2>
         <p class="w3-opacity w3-margin-left"><i>Inquiry About Our Services? Definitely reach out.</i></p>
         <div class="w3-row w3-padding-32">
