--- a/services.html
+++ b/services.html
@@ -32,6 +32,15 @@
     </div>
 </div>
 
+  <div class="col-sm-4">
+        <div class="thumbnail">
+          <p><strong>Process Improvement</strong></p>
+          <br>
+          <p>Saturday 28 November 2015</p>
+         >Buy Tickets</br>
+        </div>
+      </div>
+
 <   <div class="w3-container w3-content w3-padding-64" style="max-width:1200px" id="contact">
         <h2 class="w3-wide w3-margin-left">Contact</h2>
         <p class="w3-opacity w3-margin-left"><i>Inquiry About Our Services? Definitely reach out.</i></p>
