--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<p><a href="rgbconsultinggroup.com/home"></a></p>
+<html>
+<head>
+<title>Redirect</title>
+<meta http-equiv="refresh" content="2; URL=rgbconsultingroup.com/home">
+<meta name="keywords" content="automatic redirection">
+</head>
+<body>
+If your browser doesn't automatically go there within a few seconds, 
+you may want to go to 
+<a href="http://example.com/">the destination</a> 
+manually.
+</body>
+</html>
