--- a/services.html
+++ b/services.html
@@ -32,14 +32,33 @@
     </div>
 </div>
 
-  <div class="col-sm-4">
-        <div class="thumbnail">
-          <p><strong>Process Improvement</strong></p>
-          <br>
-          <p></p></br>
+      <div class="w3-third w3-margin-bottom">
+          <img src="process-mapping.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>Process Improvement</b></p>
+            <p class="w3-opacity">We are experts in process mapping. By breaking down business and manufacturing processes into tiny pieces, we then rebuild and reengineer in order to improve effiency and cost.</p>
+            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+          </div>
         </div>
-      </div>
-
+            <div class="w3-third w3-margin-bottom">
+          <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>Custom Software</b></p>
+            <p class="w3-opacity">From idea to fruition, we build every step along the way, developing what you knew you needed and what you didn't know you needed.</p>
+            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+          </div>
+        </div>
+            <div class="w3-third w3-margin-bottom">
+          <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+          <div class="w3-container w3-white">
+            <p><b>Paris</b></p>
+            <p class="w3-opacity">Sat 28 Nov 2016</p>
+            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+          </div>
+        </div
+>
 <   <div class="w3-container w3-content w3-padding-64" style="max-width:1200px" id="contact">
         <h2 class="w3-wide w3-margin-left">Contact</h2>
         <p class="w3-opacity w3-margin-left"><i>Inquiry About Our Services? Definitely reach out.</i></p>
