--- a/services.html
+++ b/services.html
@@ -35,13 +35,13 @@
     <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
         <h2 class="w3-wide">Services</h2>
         <p class="w3-justify">Below are what we consider to be our core services. These are our bread and butter and we know them thoroughly. In addition to what is below, we have a wide spread network from marketers to economists. So feel free to reach out if you simply need a connection!</p>
-        <b>  <h2 class="w3-wide">Services</h2></b>
+        <b>  <h2 class="w3-wide">Core Services</h2></b>
       <div class="w3-third w3-margin-bottom">
-          <img src="process-mapping.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+          <img src="process-mapping.jpg" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Process Improvement</b></p>
             <p class="w3-opacity">We are experts in process mapping. By breaking down business and manufacturing processes into tiny pieces, we then rebuild and reengineer in order to improve effiency and cost.</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="">Question about Process Improvement?</button>
+            <button class="w3-button w3-black w3-margin-bottom" onclick=href "#contact">Question about Process Improvement?</button>
           </div>
         </div>
             <div class="w3-third w3-margin-bottom">
@@ -54,7 +54,7 @@
           </div>
         </div>
             <div class="w3-third w3-margin-bottom">
-          <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+          <img src="/w3images/paris.jpg"  style="width:90%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Data Management</b></p>
             <p class="w3-opacity">We pride ourselves in the manipulation and visualization of data both big and small. We generate powerful, actionable insights from data you collect, and we work with you to set up channels to collect what data you don't have quite yet.</p>
