--- a/services.html
+++ b/services.html
@@ -37,7 +37,7 @@
         <p class="w3-justify">Below are what we consider to be our core services. These are our bread and butter and we know them thoroughly. In addition to what is below, we have a wide spread network from marketers to economists. So feel free to reach out if you simply need a connection!</p>
         <b>  <h2 class="w3-wide">Core Services</h2></b>
       <div class="w3-third w3-margin-bottom">
-          <img src="process-mapping.jpg" style="width:100%" class="w3-hover-opacity">
+          <img src="process_mapping.jpg" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Process Improvement</b></p>
             <p class="w3-opacity">We are experts in process mapping. By breaking down business and manufacturing processes into tiny pieces, we then rebuild and reengineer in order to improve effiency and cost.</p>
@@ -45,7 +45,7 @@
           </div>
         </div>
             <div class="w3-third w3-margin-bottom">
-          <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+          <img src="custom_software.jpg" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Custom Software</b></p>
             <p class="w3-opacity">From idea to fruition, we build every step along the way, developing what you knew you needed and what you didn't know you needed.</p>
@@ -54,7 +54,7 @@
           </div>
         </div>
             <div class="w3-third w3-margin-bottom">
-          <img src="/w3images/paris.jpg"  style="width:90%" class="w3-hover-opacity">
+          <img src="data_management.jpg"  style="width:90%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Data Management</b></p>
             <p class="w3-opacity">We pride ourselves in the manipulation and visualization of data both big and small. We generate powerful, actionable insights from data you collect, and we work with you to set up channels to collect what data you don't have quite yet.</p>
