--- a/services.html
+++ b/services.html
@@ -41,6 +41,7 @@
           <div class="w3-container w3-white">
             <p><b>Process Improvement</b></p>
             <p class="w3-opacity">We are experts in process mapping. By breaking down business and manufacturing processes into tiny pieces, we then rebuild and reengineer in order to improve effiency and cost.</p>
+            <a href="#contact" class="w3-bar-item w3-button w3-padding-large">Question about Process Improvement?</a>
             <button class="w3-button w3-black w3-margin-bottom" onclick=href "#contact">Question about Process Improvement?</button>
           </div>
         </div>
