--- a/services.html
+++ b/services.html
@@ -41,8 +41,7 @@
           <div class="w3-container w3-white">
             <p><b>Process Improvement</b></p>
             <p class="w3-opacity">We are experts in process mapping. By breaking down business and manufacturing processes into tiny pieces, we then rebuild and reengineer in order to improve effiency and cost.</p>
-            <a href="#contact" class="w3-bar-item w3-button w3-padding-large">Question about Process Improvement?</a>
-            <button class="w3-button w3-black w3-margin-bottom" onclick=href "#contact">Question about Process Improvement?</button>
+            <a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Process Improvement?</a>
           </div>
         </div>
             <div class="w3-third w3-margin-bottom">
@@ -55,13 +54,17 @@
           </div>
         </div>
             <div class="w3-third w3-margin-bottom">
-          <img src="data_management.jpg"  style="width:90%" class="w3-hover-opacity">
+          <img src="data_management.jpg"  style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Data Management</b></p>
             <p class="w3-opacity">We pride ourselves in the manipulation and visualization of data both big and small. We generate powerful, actionable insights from data you collect, and we work with you to set up channels to collect what data you don't have quite yet.</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Question about Data Management?</button>
           </div>
         </div>
+        <b></b>
+        <b></b>
+        <b></b>
+        <b></b>
         <div class="w3-container w3-content w3-padding-64" style="max-width:1200px" id="contact">
         <h2 class="w3-wide w3-margin-left">Contact</h2>
         <p class="w3-opacity w3-margin-left"><i>Inquiry About Our Services? Definitely reach out.</i></p>
@@ -111,27 +114,7 @@
     </div> -->
 
     <!-- The Band Section -->
-    <div class="w3-black" id="missionstatement">
-    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
-        <h2 class="w3-wide">Services</h2>
-        <p class="w3-justify">There</p>
-        <div class="w3-row w3-padding-32">
-            <div class="w3-third">
-                <p>Roberto Rojas</p>
-                <b>Founder, Principal Consultant </b>
-                <b> <br><a href="https://www.linkedin.com/in/robertojrojas/?lipi=urn%3Ali%3Apage%3Ad_flagship3_search_srp_top%3BMrphaPSRRCesmozDyzTE5Q%3D%3D&licu=urn%3Ali%3Acontrol%3Ad_flagship3_search_srp_top-search_srp_result&lici=LoGL8jYJT2aUkiXFijhdTA%3D%3D.asp" target="_blank">Linkedin</a></br></i>
-            </div>
-            <div class="w3-third">
-                <p>Daniel Gutierrez</p>
-                <b>Founder, Principal Consultant </b>
-                <b> <b><a href="https://www.linkedin.com/in/daniel-gutierrez-271396aa/.asp" target="_blank">Linkedin</a></b></i>
-            </div>
-            <div class="w3-third">
-                <p>Jonathan Boyarsky</p>
-                <b>Founder, Principal Consultant  </b><b><a href="https://www.linkedin.com/in/jonathan-boyarsky-4b4a03a6/.asp" target="_blank">Linkedin</a></b>
-            </div>
-        </div>
-    </div>
+   
 
 </style>
 </script>
