--- a/services.html
+++ b/services.html
@@ -32,7 +32,7 @@
     </div>
 </div>
 <div class="w3-black" id="services">
-    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
+    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1000px">
         <h2 class="w3-wide">Services</h2>
         <p class="w3-justify">Below are what we consider to be our core services. These are our bread and butter and we know them thoroughly. In addition to what is below, we have a wide spread network from marketers to economists. So feel free to reach out if you simply need a connection!</p>
         <b>  <h2 class="w3-wide">Core Services</h2></b>
@@ -44,6 +44,11 @@
             <a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Process Improvement?</a>
           </div>
         </div>
+        <style>
+  .bottom-three {
+     margin-bottom: 3cm;
+  }
+</style>
             <div class="w3-third w3-margin-bottom">
           <img src="custom_software.jpg" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
@@ -65,6 +70,18 @@
         <b></b>
         <b></b>
         <b></b>
+        <b></b>
+        <b></b>
+        <b></b>
+        <b></b>
+        <b></b>
+        <b></b>
+        <b></b>
+        <b></b>
+        <b></b>
+        <b></b>
+        <b></b>
+     
         <div class="w3-container w3-content w3-padding-64" style="max-width:1200px" id="contact">
         <h2 class="w3-wide w3-margin-left">Contact</h2>
         <p class="w3-opacity w3-margin-left"><i>Inquiry About Our Services? Definitely reach out.</i></p>
