--- a/services.html
+++ b/services.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="./styles.css"
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
     body {font-family: "Lato", sans-serif}
@@ -36,7 +37,7 @@
         <h2 class="w3-wide">Services</h2>
         <p class="w3-justify">Below are what we consider to be our core services. These are our bread and butter and we know them thoroughly. In addition to what is below, we have a wide spread network from marketers to economists. So feel free to reach out if you simply need a connection!</p>
         <b>  <h2 class="w3-wide">Core Services</h2></b>
-      <div class="w3-third w3-margin-bottom">
+      <div class="w3-third w3-margin-bottom serviceElement">
           <img src="process_mapping.jpg" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Process Improvement</b></p>
@@ -49,16 +50,15 @@
      margin-bottom: 3cm;
   }
 </style>
-            <div class="w3-third w3-margin-bottom">
+            <div class="w3-third w3-margin-bottom serviceElement">
           <img src="custom_software.jpg" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Custom Software</b></p>
             <p class="w3-opacity">From idea to fruition, we build every step along the way, developing what you knew you needed and what you didn't know you needed.</p>
-            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Question about Software?</button>
           </div>
         </div>
-            <div class="w3-third w3-margin-bottom">
+            <div class="w3-third w3-margin-bottom serviceElement">
           <img src="data_management.jpg"  style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Data Management</b></p>
@@ -66,20 +66,6 @@
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Question about Data Management?</button>
           </div>
         </div>
-        <b></b>
-        <b></b>
-        <b></b>
-        <b></b>
-        <b></b>
-        <b></b>
-        <b></b>
-        <b></b>
-        <b></b>
-        <b></b>
-        <b></b>
-        <b></b>
-        <b></b>
-        <b></b>
         <b></b>
      
         <div class="w3-container w3-content w3-padding-64" style="max-width:1200px" id="contact">
