--- a/services.html
+++ b/services.html
@@ -102,6 +102,7 @@
         <div class="w3-container w3-content w3-padding-64" style="max-width:1200px" id="contact">
         <h2 class="w3-wide w3-margin-left">Contact</h2>
         <p class="w3-opacity w3-margin-left"><i>Inquiry About Our Services? Definitely reach out.</i></p>
+        <div class ="margin center">
         <div class="w3-row w3-padding-32">
             <div class="w3-col m6 w3-large w3-margin-bottom">
                 <i class="fa fa-map-marker" style="width:30px"></i> Boston, US<br>
