--- a/services.html
+++ b/services.html
@@ -42,7 +42,7 @@
           <div class="w3-container w3-white">
             <p><b>Process Improvement</b></p>
             <p class="w3-opacity">We are experts in process mapping. By breaking down business and manufacturing processes into tiny pieces, we then rebuild and reengineer in order to improve effiency and cost.</p>
-            <a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Process Improvement?</a>
+            <a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Process Improvement? Contact Us</a>
           </div>
         </div>
         <style>
@@ -55,15 +55,15 @@
           <div class="w3-container w3-white">
             <p><b>Custom Software</b></p>
             <p class="w3-opacity">From idea to fruition, we build every step along the way, developing what you knew you needed and what you didn't know you needed.</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Question about Software?</button>
+            <a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Custom Software? Contact Us</a>
           </div>
         </div>
             <div class="w3-third w3-margin-bottom serviceElement">
-          <img src="data_management.jpg"  style="width:100%" class="w3-hover-opacity">
+          <img src="data_management.jpg" class="image1" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Data Management</b></p>
             <p class="w3-opacity">We pride ourselves in the manipulation and visualization of data both big and small. We generate powerful, actionable insights from data you collect, and we work with you to set up channels to collect what data you don't have quite yet.</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Question about Data Management?</button>
+            <a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Data Management? Contact Us</a>
           </div>
         </div>
         <b></b>
