--- a/services.html
+++ b/services.html
@@ -8,20 +8,20 @@
 <link rel="stylesheet" href="./styles.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-    body {font-family: "Lato", sans-serif}
-    .mySlides {display: none}
+body {font-family: "Lato", sans-serif}
+.mySlides {display: none}
 </style>
 <body>
 
-<!-- Navbar -->
-<div class="w3-top">
-    <div class="w3-bar w3-black w3-card">
-        <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-        <a href="./home" class="w3-bar-item w3-button w3-padding-large">Home</a>
-        <a href="/#missionstatement" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Mission Statement</a>
-        <a href="./services.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Services</a>
-        <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
-        <div class="w3-dropdown-hover w3-hide-small">
+	<!-- Navbar -->
+	<div class="w3-top">
+		<div class="w3-bar w3-black w3-card">
+			<a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+			<a href="./home" class="w3-bar-item w3-button w3-padding-large">Home</a>
+			<a href="/#missionstatement" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Mission Statement</a>
+			<a href="./services.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Services</a>
+			<a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
+			<div class="w3-dropdown-hover w3-hide-small">
           <!--   <button class="w3-padding-large w3-button" title="More">More <i class="fa fa-caret-down"></i></button>
             <div class="w3-dropdown-content w3-bar-block w3-card-4">
                 <a href="#" class="w3-bar-item w3-button">Add whatever I want here</a>
@@ -33,40 +33,40 @@
     </div>
 </div>
 <div class="w3-black" id="services">
-    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1000px">
-        <h2 class="w3-wide">Services</h2>
-        <p class="w3-justify">Below are what we consider to be our core services. These are our bread and butter and we know them thoroughly. In addition to what is below, we have a wide spread network from marketers to economists. So feel free to reach out if you simply need a connection!</p>
-        <b>  <h2 class="w3-wide">Core Services</h2></b>
-      <div class="w3-third w3-margin-bottom serviceElement">
-          <img src="process_mapping.jpg" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
-            <p><b>Process Improvement</b></p>
-            <p class="w3-opacity">We are experts in process mapping. By breaking down business and manufacturing processes into tiny pieces, we then rebuild and reengineer in order to improve effiency and cost.</p>
-            <a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Process Improvement? Contact Us</a>
-          </div>
-        </div>
-        <style>
-  .bottom-three {
-     margin-bottom: 3cm;
-  }
-</style>
-            <div class="w3-third w3-margin-bottom serviceElement">
-          <img src="custom_software.jpg" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
-            <p><b>Custom Software</b></p>
-            <p class="w3-opacity">From idea to fruition, we build every step along the way, developing what you knew you needed and what you didn't know you needed.</p>
-            <a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Custom Software? Contact Us</a>
-          </div>
-        </div>
-            <div class="w3-third w3-margin-bottom serviceElement">
-          <img src="data_management.jpg" class="image1" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
-            <p><b>Data Management</b></p>
-            <p class="w3-opacity">We pride ourselves in the manipulation and visualization of data both big and small. We generate powerful, actionable insights from data you collect, and we work with you to set up channels to collect what data you don't have quite yet.</p>
-            <a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Data Management? Contact Us</a>
-          </div>
-        </div>
-        <b></b>
+	<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1000px">
+		<h2 class="w3-wide">Services</h2>
+		<p class="w3-justify">Below are what we consider to be our core services. These are our bread and butter and we know them thoroughly. In addition to what is below, we have a wide spread network from marketers to economists. So feel free to reach out if you simply need a connection!</p>
+		<b>  <h2 class="w3-wide">Core Services</h2></b>
+		<div class="w3-third w3-margin-bottom">
+			<img src="process_mapping.jpg" style="width:100%" class="w3-hover-opacity image1">
+			<div class="w3-container w3-white serviceElement">
+				<p><b>Process Improvement</b></p>
+				<p class="w3-opacity">We are experts in process mapping. By breaking down business and manufacturing processes into tiny pieces, we then rebuild and reengineer in order to improve effiency and cost.</p>
+				<a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Process Improvement? Contact Us</a>
+			</div>
+		</div>
+		<style>
+		.bottom-three {
+			margin-bottom: 3cm;
+		}
+	</style>
+	<div class="w3-third w3-margin-bottom serviceElement">
+		<img src="custom_software.jpg" style="width:100%" class="w3-hover-opacity image1">
+		<div class="w3-container w3-white">
+			<p><b>Custom Software</b></p>
+			<p class="w3-opacity">From idea to fruition, we build every step along the way, developing what you knew you needed and what you didn't know you needed.</p>
+			<a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Custom Software? Contact Us</a>
+		</div>
+	</div>
+	<div class="w3-third w3-margin-bottom serviceElement">
+		<img src="data_management.jpg" class="image1" style="width:100%" class="w3-hover-opacity">
+		<div class="w3-container w3-white">
+			<p><b>Data Management</b></p>
+			<p class="w3-opacity">We pride ourselves in the manipulation and visualization of data both big and small. We generate powerful, actionable insights from data you collect, and we work with you to set up channels to collect what data you don't have quite yet.</p>
+			<a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Data Management? Contact Us</a>
+		</div>
+	</div>
+	<b></b>
      <!--
         <div class="w3-container w3-content w3-padding-64" style="max-width:1200px" id="contact">
         <h2 class="w3-wide w3-center">Contact</h2>
@@ -94,26 +94,26 @@
                         </div> -->
                     </div>
                   <!--   <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-                    <button class="w3-button w3-black w3-section w3-right" type="submit">SEND</button> -->
-                </form>
-            </div>
-        </div>
-    </div>
-        <div class="w3-container w3-content w3-padding-64" style="max-width:1200px" id="contact">
-        <h2 class="w3-wide w3-margin-left">Contact</h2>
-        <p class="w3-opacity w3-margin-left"><i>Inquiry About Our Services? Definitely reach out.</i></p>
-        <div class ="margin center">
-        <div class="w3-row w3-padding-32">
-            <div class="w3-col m6 w3-large w3-margin-bottom">
-                <i class="fa fa-map-marker" style="width:30px"></i> Boston, US<br>
-                <i class="fa fa-map-marker" style="width:30px"></i>
-                San Jose, CR<br>
-                <i class="fa fa-phone" style="width:30px"></i> Phone: +1 617-470-7125<br>
-                <i class="fa fa-envelope" style="width:30px"> </i> For North American Inquiries Email: jboyarsky@rgbconsultinggroup.com<br>
-                <i class="fa fa-envelope" style="width:30px"> </i> For Latin American Inquiries Email: <br>rrojas@rgbconsultinggroup.com<br>
-            </div> 
+                  	<button class="w3-button w3-black w3-section w3-right" type="submit">SEND</button> -->
+                  </form>
+              </div>
+          </div>
+      </div>
+      <div class="w3-container w3-content w3-padding-64" style="max-width:1200px" id="contact">
+      	<h2 class="w3-wide w3-margin-left">Contact</h2>
+      	<p class="w3-opacity w3-margin-left"><i>Inquiry About Our Services? Definitely reach out.</i></p>
+      	<div class ="margin center">
+      		<div class="w3-row w3-padding-32">
+      			<div class="w3-col m6 w3-large w3-margin-bottom">
+      				<i class="fa fa-map-marker" style="width:30px"></i> Boston, US<br>
+      				<i class="fa fa-map-marker" style="width:30px"></i>
+      				San Jose, CR<br>
+      				<i class="fa fa-phone" style="width:30px"></i> Phone: +1 617-470-7125<br>
+      				<i class="fa fa-envelope" style="width:30px"> </i> For North American Inquiries Email: jboyarsky@rgbconsultinggroup.com<br>
+      				<i class="fa fa-envelope" style="width:30px"> </i> For Latin American Inquiries Email: <br>rrojas@rgbconsultinggroup.com<br>
+      			</div> 
 
-                  
+
 
   <!--   </div>
    <!--  <div class="mySlides w3-display-container w3-center">
@@ -132,7 +132,7 @@
     </div> -->
 
     <!-- The Band Section -->
-   
+
 
 </style>
 </script>
