--- a/services.html
+++ b/services.html
@@ -47,12 +47,7 @@ body {font-family: "Lato", sans-serif}
 				</div>
 			</div>
 		</div>
-		<style>
-		.bottom-three {
-			margin-bottom: 9cm;
-		}
-	</style>
-	<div class="w3-third w3-margin-bottom serviceElement">
+	<div class="w3-wide w3-margin-bottom serviceElement">
 		<img src="custom_software.jpg" style="width:100%" class="w3-hover-opacity image1">
 		<div class="w3-container w3-white">
 			<p><b>Custom Software</b></p>
