--- a/services.html
+++ b/services.html
@@ -55,7 +55,7 @@ body {font-family: "Lato", sans-serif}
 			<a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Custom Software? Contact Us</a>
 		</div>
 	</div>
-	<div class="w3-third w3-margin-bottom serviceElement">
+	<div class="w3-wide w3-margin-bottom serviceElement">
 		<img src="data_management.jpg" class="image1" style="width:100%" class="w3-hover-opacity">
 		<div class="w3-container w3-white">
 			<p><b>Data Management</b></p>
