--- a/services.html
+++ b/services.html
@@ -37,10 +37,10 @@ body {font-family: "Lato", sans-serif}
 		<h2 class="w3-wide">Services</h2>
 		<p class="w3-justify">Below are what we consider to be our core services. These are our bread and butter and we know them thoroughly. In addition to what is below, we have a wide spread network from marketers to economists. So feel free to reach out if you simply need a connection!</p>
 		<b>  <h2 class="w3-wide">Core Services</h2></b>
-		<div class="w3-third w3-margin-bottom">
-			<img src="process_mapping.jpg" style="width:100%" class="w3-hover-opacity image1">
+		<div class="w3-wide w3-margin-top">
+			<img src="process_mapping.jpg" style="width:100%>
 			<div class="w3-container w3-white serviceElement">
-				 <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+   
 				<p><b>Process Improvement</b></p>
 				<p class="w3-opacity">We are experts in process mapping. By breaking down business and manufacturing processes into tiny pieces, we then rebuild and reengineer in order to improve effiency and cost.</p>
 				<div id="ex1"><a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Process Improvement? Contact Us</a>
