--- a/services.html
+++ b/services.html
@@ -47,16 +47,16 @@ body {font-family: "Lato", sans-serif}
 				</div>
 			</div>
 		</div>
-	<div class="w3-wide w3-margin-bottom serviceElement">
-		<img src="custom_software.jpg" style="width:100%" class="w3-hover-opacity image1">
+	<div class="w3-container w3-wide w3-margin-bottom serviceElement">
+		<img src="custom_software.jpg" style="width:100%">
 		<div class="w3-container w3-white">
 			<p><b>Custom Software</b></p>
 			<p class="w3-opacity">From idea to fruition, we build every step along the way, developing what you knew you needed and what you didn't know you needed.</p>
 			<a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Custom Software? Contact Us</a>
 		</div>
 	</div>
-	<div class="w3-wide w3-margin-bottom serviceElement">
-		<img src="data_management.jpg" class="image1" style="width:100%" class="w3-hover-opacity">
+	<div class="w3-container 3-wide w3-margin-bottom serviceElement">
+		<img src="data_management.jpg" class="image1" style="width:100%">
 		<div class="w3-container w3-white">
 			<p><b>Data Management</b></p>
 			<p class="w3-opacity">We pride ourselves in the manipulation and visualization of data both big and small. We generate powerful, actionable insights from data you collect, and we work with you to set up channels to collect what data you don't have quite yet.</p>
