--- a/services.html
+++ b/services.html
@@ -35,9 +35,9 @@ body {font-family: "Lato", sans-serif}
 <div class="w3-black" id="services">
 	<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1000px">
 		<h2 class="w3-wide">Services</h2>
-		<p class="w3-justify">Below are what we consider to be our core services. These are our bread and butter and we know them thoroughly. In addition to what is below, we have a wide spread network from marketers to economists. So feel free to reach out if you simply need a connection!</p>
+		<p class="w3-justify">Below are what we consider to be our core services. These are our bread and butter and we know them thoroughly. In addition to what is below, we have a wide-spread network from marketers to economists. So feel free to reach out if you simply need a connection!</p>
 		<b>  <h2 class="w3-wide">Core Services</h2></b>
-		<div class="w3-wide w3-margin-top">
+		<div class="w3-wide w3-third w3-margin-top">
 			<img src="process_mapping.jpg" style="width:100%>
 			<div class="w3-container w3-white serviceElement">
    
@@ -47,7 +47,7 @@ body {font-family: "Lato", sans-serif}
 				</div>
 			</div>
 		</div>
-	<div class="w3-container w3-wide w3-margin-bottom serviceElement">
+	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
 		<img src="custom_software.jpg" style="width:100%">
 		<div class="w3-container w3-white">
 			<p><b>Custom Software</b></p>
@@ -55,7 +55,7 @@ body {font-family: "Lato", sans-serif}
 			<a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Custom Software? Contact Us</a>
 		</div>
 	</div>
-	<div class="w3-container 3-wide w3-margin-bottom serviceElement">
+	<div class="w3-container w3-third 3-wide w3-margin-bottom serviceElement">
 		<img src="data_management.jpg" class="image1" style="width:100%">
 		<div class="w3-container w3-white">
 			<p><b>Data Management</b></p>
