--- a/services.html
+++ b/services.html
@@ -37,7 +37,7 @@ body {font-family: "Lato", sans-serif}
 		<h2 class="w3-wide">Services</h2>
 		<p class="w3-justify">Below are what we consider to be our core services. These are our bread and butter and we know them thoroughly. In addition to what is below, we have a wide-spread network from marketers to economists. So feel free to reach out if you simply need a connection!</p>
 		<b>  <h2 class="w3-wide">Core Services</h2></b>
-		<div class="w3-wide w3-third w3-margin-top">
+		<div class="w3-wide w3-margin-bottom">
 			<img src="process_mapping.jpg" style="width:100%>
 			<div class="w3-container w3-white serviceElement">
    
