--- a/services.html
+++ b/services.html
@@ -35,7 +35,7 @@ body {font-family: "Lato", sans-serif}
 <div class="w3-black" id="services">
 	<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1000px">
 		<h2 class="w3-wide">Services</h2>
-		<p class="w3-justify">Below are what we consider to be our core services. These are our bread and butter and we know them thoroughly. In addition to what is below, we have a wide-spread network from marketers to economists. So feel free to reach out if you simply need a connection!</p>
+		<p class="w3-center">Below are what we consider to be our core services. These are our bread and butter and we know them thoroughly. In addition to what is below, we have a wide-spread network from marketers to economists. So feel free to reach out if you simply need a connection!</p>
 		<b>  <h2 class="w3-wide">Core Services</h2></b>
 		<div class="w3-wide w3-margin-bottom">
 			<img src="process_mapping.jpg" style="width:100%>
