--- a/services.html
+++ b/services.html
@@ -37,16 +37,15 @@ body {font-family: "Lato", sans-serif}
 		<h2 class="w3-wide">Services</h2>
 		<p class="w3-center">Below are what we consider to be our core services. These are our bread and butter and we know them thoroughly. In addition to what is below, we have a wide-spread network from marketers to economists. So feel free to reach out if you simply need a connection!</p>
 		<b>  <h2 class="w3-wide">Core Services</h2></b>
-		<div class="w3-wide w3-margin-bottom">
-			<img src="process_mapping.jpg" style="width:100%>
-			<div class="w3-container w3-white serviceElement">
-   
-				<p><b>Process Improvement</b></p>
-				<p class="w3-opacity">We are experts in process mapping. By breaking down business and manufacturing processes into tiny pieces, we then rebuild and reengineer in order to improve effiency and cost.</p>
-				<div id="ex1"><a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Process Improvement? Contact Us</a>
-				</div>
-			</div>
+		
+		<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
+		<img src="custom_software.jpg" style="width:100%">
+		<div class="w3-container w3-white">
+			<p><b>Process Improvement</b></p>
+			<p class="w3-opacity">We are experts in process mapping. By breaking down business and manufacturing processes into tiny pieces, we then rebuild and reengineer in order to improve effiency and cost.</p>
+			<a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Process Improvement? Contact Us</a>
 		</div>
+	</div>
 	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
 		<img src="custom_software.jpg" style="width:100%">
 		<div class="w3-container w3-white">
