--- a/services.html
+++ b/services.html
@@ -39,11 +39,11 @@ body {font-family: "Lato", sans-serif}
 		<b>  <h2 class="w3-wide">Core Services</h2></b>
 		
 		<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
-		<img src="custom_software.jpg" style="width:100%">
+		<img src="process_mapping.jpg" style="width:100%">
 		<div class="w3-container w3-white">
 			<p><b>Process Improvement</b></p>
 			<p class="w3-opacity">We are experts in process mapping. By breaking down business and manufacturing processes into tiny pieces, we then rebuild and reengineer in order to improve effiency and cost.</p>
-			<a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Process Improvement? Contact Us</a>
+			<a href="#contact" class="w3-bar-item w3-black w3-button ">Question about Process Improvement? Contact Us</a>
 		</div>
 	</div>
 	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
@@ -51,7 +51,7 @@ body {font-family: "Lato", sans-serif}
 		<div class="w3-container w3-white">
 			<p><b>Custom Software</b></p>
 			<p class="w3-opacity">From idea to fruition, we build every step along the way, developing what you knew you needed and what you didn't know you needed.</p>
-			<a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Custom Software? Contact Us</a>
+			<a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Custom Software? Contact Us</a>
 		</div>
 	</div>
 	<div class="w3-container w3-third 3-wide w3-margin-bottom serviceElement">
