--- a/services.html
+++ b/services.html
@@ -51,7 +51,7 @@ body {font-family: "Lato", sans-serif}
 		<div class="w3-container w3-white">
 			<p><b>Custom Software</b></p>
 			<p class="w3-opacity">From idea to fruition, we build every step along the way, developing what you knew you needed and what you didn't know you needed.</p>
-			<a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Custom Software? Contact Us</a>
+			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Custom Software? Contact Us</a>
 		</div>
 	</div>
 	<div class="w3-container w3-third 3-wide w3-margin-bottom serviceElement">
