--- a/services.html
+++ b/services.html
@@ -43,7 +43,7 @@ body {font-family: "Lato", sans-serif}
 		<div class="w3-container w3-white">
 			<p><b>Process Improvement</b></p>
 			<p class="w3-opacity">We are experts in process mapping. By breaking down business and manufacturing processes into tiny pieces, we then rebuild and reengineer in order to improve effiency and cost.</p>
-			<a href="#contact" class="w3-bar-item w3-black w3-button ">Question about Process Improvement? Contact Us</a>
+			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button ">Question about Process Improvement? Contact Us</a>
 		</div>
 	</div>
 	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
@@ -59,7 +59,7 @@ body {font-family: "Lato", sans-serif}
 		<div class="w3-container w3-white">
 			<p><b>Data Management</b></p>
 			<p class="w3-opacity">We pride ourselves in the manipulation and visualization of data both big and small. We generate powerful, actionable insights from data you collect, and we work with you to set up channels to collect what data you don't have quite yet.</p>
-			<a href="#contact" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Data Management? Contact Us</a>
+			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Data Management? Contact Us</a>
 		</div>
 	</div>
 	<b></b>
